ADD: evaluation notebook

--- a/notebooks/spaCyTest.ipynb
+++ b/notebooks/spaCyTest.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "    \"B-TIME\": \"B-time\",\n",
     "    \"I-TIME\": \"I-time\",\n",
     "    \"B-DATE\": \"B-time\",\n",
-    "    \"I-DATE\": \"I-time\",\n",
+    "    \"I-DATE\": \"O\",\n",
     "    \"B-NORP\": \"B-gpe\",\n",
     "    \"I-NORP\": \"I-gpe\",\n",
     "    \"B-FAC\": \"O\",\n",
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,20 +428,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Size': 196646,\n",
-       " 'CorrectPredictionsWithO': 179008,\n",
-       " 'CorrectEntity': 18607,\n",
+       " 'CorrectPredictionsWithO': 180117,\n",
+       " 'CorrectEntity': 17973,\n",
        " 'AllEntities': 30036,\n",
-       " 'AllPredictions': 32087}"
+       " 'AllPredictions': 29225}"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,16 +459,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Absoulte accuracy: 91.03%\n",
-      "Entity based accuracy: 61.95%\n",
-      "Predicted entity based accuracy: 57.99%\n"
+      "Absoulte accuracy: 91.59%\n",
+      "Entity based accuracy: 59.84%\n",
+      "Predicted entity based accuracy: 61.50%\n"
      ]
     }
    ],
@@ -1902,13 +1902,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "  1%|▏         | 133/9000 [00:21<24:40,  5.99it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -3084,13 +3078,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "  4%|▍         | 402/9000 [01:01<21:22,  6.71it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -4266,13 +4254,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "  7%|▋         | 668/9000 [01:43<20:39,  6.72it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -5448,13 +5430,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 10%|█         | 942/9000 [02:26<19:57,  6.73it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -6615,13 +6591,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 13%|█▎        | 1198/9000 [03:09<22:11,  5.86it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -7777,13 +7747,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 16%|█▌        | 1451/9000 [03:52<20:07,  6.25it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -8939,13 +8903,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 19%|█▉        | 1708/9000 [04:35<18:08,  6.70it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -10101,13 +10059,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 22%|██▏       | 1964/9000 [05:20<19:07,  6.13it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -11263,13 +11215,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 25%|██▍       | 2225/9000 [06:03<20:37,  5.47it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -12425,13 +12371,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 27%|██▋       | 2472/9000 [06:49<20:37,  5.28it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -13587,13 +13527,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 30%|███       | 2717/9000 [07:36<23:00,  4.55it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -14749,13 +14683,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 33%|███▎      | 2968/9000 [08:21<22:00,  4.57it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -15911,13 +15839,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 36%|███▌      | 3220/9000 [09:07<22:39,  4.25it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -17073,13 +16995,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 38%|███▊      | 3465/9000 [09:54<17:35,  5.24it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -18235,13 +18151,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 41%|████▏     | 3717/9000 [10:40<17:14,  5.11it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -19397,13 +19307,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 44%|████▍     | 3963/9000 [11:28<13:23,  6.27it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -20559,13 +20463,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 47%|████▋     | 4208/9000 [12:15<17:48,  4.48it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -21721,13 +21619,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 49%|████▉     | 4449/9000 [13:04<18:48,  4.03it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -22883,13 +22775,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 52%|█████▏    | 4693/9000 [13:55<16:01,  4.48it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -24045,13 +23931,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 55%|█████▍    | 4935/9000 [14:44<16:36,  4.08it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -25207,13 +25087,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 58%|█████▊    | 5179/9000 [15:33<15:15,  4.17it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -26369,13 +26243,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 60%|██████    | 5422/9000 [16:22<15:13,  3.91it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -27531,13 +27399,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 63%|██████▎   | 5672/9000 [17:12<11:00,  5.04it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -28693,13 +28555,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 66%|██████▌   | 5914/9000 [18:01<11:10,  4.60it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -29855,13 +29711,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 68%|██████▊   | 6153/9000 [18:52<10:14,  4.63it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -31017,13 +30867,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 71%|███████   | 6395/9000 [19:44<08:54,  4.87it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -32179,13 +32023,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 74%|███████▎  | 6633/9000 [20:35<08:13,  4.79it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -33341,13 +33179,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 76%|███████▋  | 6876/9000 [21:27<08:44,  4.05it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -34503,13 +34335,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 79%|███████▉  | 7111/9000 [22:19<06:33,  4.80it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -35665,13 +35491,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 82%|████████▏ | 7347/9000 [23:08<05:17,  5.21it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -36827,13 +36647,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 84%|████████▍ | 7584/9000 [24:00<05:19,  4.44it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -37989,13 +37803,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 87%|████████▋ | 7831/9000 [24:56<04:24,  4.43it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -39151,13 +38959,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 90%|████████▉ | 8095/9000 [29:12<03:34,  4.21it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -40313,13 +40115,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 93%|█████████▎| 8341/9000 [30:09<02:03,  5.32it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -41475,13 +41271,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 95%|█████████▌| 8574/9000 [31:09<01:32,  4.60it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
@@ -42637,13 +42427,7 @@
       "\n",
       "\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "\n",
       " 98%|█████████▊| 8811/9000 [32:08<00:53,  3.54it/s]\u001b[A\u001b[A\u001b[A\u001b[A\u001b[A\n",
       "\n",
       "\n",
