ADD: training script

--- a/notebooks/TrainSpacCy.ipynb
+++ b/notebooks/TrainSpacCy.ipynb
@@ -23272,7 +23272,7 @@
    ],
    "source": [
     "train_data = create_train_data(base_df, 1000)\n",
-    "train_data"
+    "# train_data"
    ]
   },
   {
@@ -23813,200 +23813,6 @@
     "print(\"Recall: \" + str(get_recall(predicted_df)))\n",
     "print(\"Precision: \" + str(get_precision(predicted_df)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8798094037000499\n"
-     ]
-    }
-   ],
-   "source": [
-    "# errors = 0\n",
-    "# for index, row in validation.iterrows():\n",
-    "#     doc = nlp(str(row['Word']))\n",
-    "#     validation.loc[index, 'Prediction'] = doc.ents[0].label_\n",
-    "#     if doc.ents[0].label_ != str(row['Tag']):\n",
-    "#         errors += 1\n",
-    "# print('Accuracy: ' + str(1 - errors/len(validation.index)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Sentence #</th>\n",
-       "      <th>Word</th>\n",
-       "      <th>POS</th>\n",
-       "      <th>Tag</th>\n",
-       "      <th>Prediction</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Sentence: 1</td>\n",
-       "      <td>President</td>\n",
-       "      <td>NNP</td>\n",
-       "      <td>B-per</td>\n",
-       "      <td>B-per</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Karzai</td>\n",
-       "      <td>NNP</td>\n",
-       "      <td>I-per</td>\n",
-       "      <td>I-per</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>thanked</td>\n",
-       "      <td>VBD</td>\n",
-       "      <td>O</td>\n",
-       "      <td>O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>his</td>\n",
-       "      <td>PRP$</td>\n",
-       "      <td>O</td>\n",
-       "      <td>O</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>allies</td>\n",
-       "      <td>NNS</td>\n",
-       "      <td>O</td>\n",
-       "      <td>O</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Sentence #       Word   POS    Tag Prediction\n",
-       "0  Sentence: 1  President   NNP  B-per      B-per\n",
-       "1          NaN     Karzai   NNP  I-per      I-per\n",
-       "2          NaN    thanked   VBD      O          O\n",
-       "3          NaN        his  PRP$      O          O\n",
-       "4          NaN     allies   NNS      O          O"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "validation.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validation.to_csv('../datasets/TrainingPrediction.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'AllEntities': 30036,\n",
-       " 'AllPredictions': 30266,\n",
-       " 'CorrectEntity': 10563,\n",
-       " 'CorrectPredictionsWithO': 173010,\n",
-       " 'Size': 196646}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results = {\n",
-    "    \"Size\": validation.shape[0],\n",
-    "    \"CorrectPredictionsWithO\": validation.loc[validation['Tag'] == validation['Prediction']].shape[0],\n",
-    "    \"CorrectEntity\": validation.loc[(validation['Tag'] != \"O\") & (validation['Tag'] == validation['Prediction'])].shape[0],\n",
-    "    \"AllEntities\": validation.loc[validation['Tag'] != \"O\"].shape[0],\n",
-    "    \"AllPredictions\": validation.loc[validation['Prediction'] != \"O\"].shape[0]\n",
-    "}\n",
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Absoulte accuracy: 87.98%\n",
-      "Entity based accuracy: 35.17%\n",
-      "Predicted entity based accuracy: 34.90%\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Absoulte accuracy: {0:.2f}%\".format(results[\"CorrectPredictionsWithO\"] / results[\"Size\"] * 100))\n",
-    "print(\"Entity based accuracy: {0:.2f}%\".format(results[\"CorrectEntity\"] / results[\"AllEntities\"] * 100))\n",
-    "print(\"Predicted entity based accuracy: {0:.2f}%\".format(results[\"CorrectEntity\"] / results[\"AllPredictions\"] * 100))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 229,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
