--- a/notebooks/TrainSpacCy.ipynb
+++ b/notebooks/TrainSpacCy.ipynb
@@ -134,7 +134,7 @@
     "def get_precision(df):\n",
     "    tp = df.loc[(df['Tag'] != 'O') & (df['Tag'] == df['Prediction']) & (df['is_trained'] == False)].shape[0]\n",
     "    tp_fp = df.loc[(df['Prediction'] != 'O') & (df['is_trained'] == False)].shape[0] - 1\n",
-    "    return tp / tp_fp"
+    "    return tp / tp_fp * 100"
    ]
   },
   {
